<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@android:color/background_dark">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:gravity="center_horizontal|center_vertical|end"
            android:background="@android:color/background_dark" android:id="@+id/linearLayout">
        <TextView
                android:text="@string/input"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                android:textColor="@android:color/background_light" android:textSize="36sp"
                android:gravity="end"/>
    </LinearLayout>
    <Button
            android:text="@string/divide"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/button10"
            app:layout_constraintStart_toEndOf="@+id/button11" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toTopOf="@+id/button14" android:textSize="36sp"/>
    <Button
            android:text="@string/percentage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button11"
            app:layout_constraintStart_toEndOf="@+id/button12" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button10"
            app:layout_constraintTop_toTopOf="@+id/button10" app:layout_constraintBottom_toBottomOf="@+id/button10"
            android:textSize="36sp"/>
    <Button
            android:text="@string/plusOrMinus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button12"
            app:layout_constraintStart_toEndOf="@+id/button13" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button11"
            app:layout_constraintBottom_toBottomOf="@+id/button11" app:layout_constraintTop_toTopOf="@+id/button11"
            android:textSize="36sp"/>
    <Button
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button13" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button12"
            app:layout_constraintTop_toTopOf="@+id/button12" app:layout_constraintBottom_toBottomOf="@+id/button12"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="36sp"/>
    <Button
            android:text="@string/multiply"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/button10" android:id="@+id/button14"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button10"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/button15"
            android:textSize="36sp"/>
    <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/button15" app:layout_constraintStart_toStartOf="@+id/button14"
            app:layout_constraintEnd_toEndOf="@+id/button14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button14" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/button16" android:textSize="36sp"/>
    <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/button16" app:layout_constraintStart_toStartOf="@+id/button15"
            app:layout_constraintEnd_toEndOf="@+id/button15" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button15" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/button17" android:textSize="36sp"/>
    <Button
            android:text="@string/equal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/button16" android:id="@+id/button17"
            app:layout_constraintStart_toStartOf="@+id/button16" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button16"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent" android:textSize="36sp"/>
    <Button
            android:text="@string/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button18"
            app:layout_constraintTop_toTopOf="@+id/button14" app:layout_constraintBottom_toBottomOf="@+id/button14"
            app:layout_constraintVertical_bias="0.56" app:layout_constraintEnd_toEndOf="@+id/button11"
            app:layout_constraintStart_toEndOf="@+id/button12"
            android:textSize="36sp"/>
    <Button
            android:text="@string/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button19" app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintEnd_toEndOf="@+id/button12"
            app:layout_constraintTop_toTopOf="@+id/button18" app:layout_constraintBottom_toBottomOf="@+id/button18"
            android:textSize="36sp"/>
    <Button
            android:text="@string/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/button13"
            android:id="@+id/button20" app:layout_constraintEnd_toEndOf="@+id/button13"
            app:layout_constraintTop_toTopOf="@+id/button19" app:layout_constraintBottom_toBottomOf="@+id/button19"
            android:textSize="36sp"/>
    <Button
            android:text="6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button21"
            app:layout_constraintBottom_toBottomOf="@+id/button15"
            app:layout_constraintTop_toTopOf="@+id/button15" app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintEnd_toEndOf="@+id/button18"
            android:textSize="36sp"/>
    <Button
            android:text="5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button22" app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintEnd_toEndOf="@+id/button19"
            app:layout_constraintTop_toTopOf="@+id/button21" app:layout_constraintBottom_toBottomOf="@+id/button21"
            android:textSize="36sp"/>
    <Button
            android:text="4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/button20"
            android:id="@+id/button23"
            app:layout_constraintBottom_toBottomOf="@+id/button22" app:layout_constraintTop_toTopOf="@+id/button22"
            app:layout_constraintEnd_toEndOf="@+id/button20"
            android:textSize="36sp"/>
    <Button
            android:text="3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button24"
            app:layout_constraintTop_toTopOf="@+id/button16" app:layout_constraintBottom_toBottomOf="@+id/button16"
            app:layout_constraintEnd_toEndOf="@+id/button21"
            app:layout_constraintStart_toStartOf="@+id/button21" android:textSize="36sp"/>
    <Button
            android:text="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button25"
            app:layout_constraintTop_toTopOf="@+id/button24" app:layout_constraintBottom_toBottomOf="@+id/button24"
            app:layout_constraintEnd_toEndOf="@+id/button22"
            app:layout_constraintStart_toStartOf="@+id/button22" android:textSize="36sp"/>
    <Button
            android:text="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/button23"
            android:id="@+id/button26"
            app:layout_constraintTop_toTopOf="@+id/button25" app:layout_constraintBottom_toBottomOf="@+id/button25"
            app:layout_constraintEnd_toEndOf="@+id/button23" android:textSize="36sp"/>
    <Button
            android:text="@string/decimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button27"
            app:layout_constraintTop_toTopOf="@+id/button17" app:layout_constraintBottom_toBottomOf="@+id/button17"
            app:layout_constraintStart_toStartOf="@+id/button24"
            app:layout_constraintEnd_toEndOf="@+id/button24" android:textSize="36sp"/>
    <Button
            android:text="@string/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button28" app:layout_constraintEnd_toEndOf="@+id/button25"
            app:layout_constraintStart_toStartOf="@+id/button26"
            app:layout_constraintBottom_toBottomOf="@+id/button27" app:layout_constraintTop_toTopOf="@+id/button27"
            android:textSize="36sp"/>
</android.support.constraint.ConstraintLayout>